# oslo.config

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .zuul.yaml  CONTRIBUTING.rst  MANIFEST.in  README  README.rst  bandit.yaml  bindep.txt  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements-py3.txt  test-requirements.txt  tox.ini
.zuul.d/: project.yaml
doc/: requirements.txt
doc/source/: builtins.rst  cfg.rst  cfgfilter.rst  conf.py  config-generator.conf  configopts.rst  exceptions.rst  faq.rst  fixture.rst  generator.rst  helpers.rst  index.rst  namespaces.rst  opts.rst  parser.rst  sphinxconfiggen.rst  sphinxext.rst  styleguide.rst  types.rst
doc/source/cli/: generator.rst  index.rst  validator.rst
doc/source/configuration/: drivers.rst  format.rst  index.rst  options.rst  quickstart.rst
doc/source/reference/: accessing.rst  cfg.rst  cfgfilter.rst  command-line.rst  configopts-state.rst  configuration-files.rst  defining.rst  deprecating.rst  drivers.rst  exceptions.rst  faq.rst  fixture.rst  globals.rst  helpers.rst  index.rst  locations.rst  mutable.rst  opts.rst  parser.rst  sphinxext.rst  styleguide.rst  types.rst
magic/openstack/common/: setup.py
openstack/common/: cfg.py
oslo/: __init__.py
oslo/config/: cfg.py  cfgfilter.py  fixture.py  generator.py  iniparser.py  types.py
oslo_config/: _i18n.py  _list_opts.py  cfg.py  cfgfilter.py  fixture.py  generator.py  iniparser.py  sphinxconfiggen.py  sphinxext.py  types.py  validator.py  version.py
oslo_config/sources/: __init__.py  _environment.py  _uri.py  ini.py
oslo_config/sources/templates/: bash-completion.template  zsh-completion.template
oslo_config/tests/: test_cfg.py  test_cfgfilter.py  test_fixture.py  test_generator.py  test_get_location.py  test_iniparser.py  test_sources.py  test_sphinxconfiggen.py  test_sphinxext.py  test_types.py  test_validator.py
releasenotes/notes/: add-HostAddressOpt-6e7e2afe7c7863cb.yaml  add-HostDomain-implement-rfc1033-c985a3054f824e9d.yaml  add-default-config-dirs-03340ff6689afe94.yaml  add-float-min-max-b1a2e16301c8435c.yaml  add-missing-config-option-9ee1992eea750200.yaml  add-port_type-8704295c6a56265d.yaml  add-reno-71dc832ce29b962f.yaml  add_choices_parameter_for_IntOpt_class-1b5e42c475c08f08.yaml  add_option_for_shell_completion-47b1b47d41a490e8.yaml  config-from-environment-3feba7b4cc747d2b.yaml  config-validator-256817f2183994fd.yaml  configopts-serialization-spawn-9f6d3a1c2b4e5f70.yaml  deprecate-version-module-10817e0cac220063.yaml  dict-key-value-separator-127ce36ba4d9245f.yaml  machine-readable-sample-config-e8f8ba43ababcf99.yaml  min_length-5e5ae84e1fa3f856.yaml  positional-arguments-are-required-22ddca72e6f523bf.yaml  remove-uri-value-4078778bce0b96cb.yaml  show-deprecated-reason-361a8eb31e05c97e.yaml  start-using-reno-f24f3ec911d27f13.yaml  support-choice-descriptions-8b2d0c14fbd16b2a.yaml  support-fatal-deprecations-ea0513aa58a395ca.yaml  validator-check-defaults-e7b596a2fde781a8.yaml  validator-exclude-groups-ad2f046522a3407e.yaml
releasenotes/source/: conf.py  index.rst
tests/: test_cfg.py  test_cfgfilter.py  test_fixture.py  test_generator.py  test_iniparser.py  test_types.py  test_warning.py  utils.py
tests/testmods/: bar_foo_opt.py  baz_qux_opt.py  blaa_opt.py  fbaar_baa_opt.py  fbar_foo_opt.py  fblaa_opt.py
tests/unit/: test_cfg.py  test_iniparser.py
tools/: pip-requires  test-requires  tox_install.sh
