[metadata]
name = oslo.config
summary = Oslo Configuration API
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/oslo.config/latest/
python-requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_config

[entry_points]
console_scripts =
    oslo-config-generator = oslo_config.generator:main
    oslo-config-validator = oslo_config.validator:main
oslo.config.opts =
    oslo.config = oslo_config._list_opts:list_opts
oslo.config.driver =
    remote_file = oslo_config.sources._uri:URIConfigurationSourceDriver

[bdist_wheel]
universal = 1
