[metadata]
name = oslo.config
summary = Oslo Configuration API
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/oslo.config/latest/
python_requires = >=3.8
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[extras]
# package dependencies for optional behavior in the config generator.
# e.g.: oslo.config[generator]
rst-generator =
    rst2txt>=1.1.0 # BSD
    sphinx>=1.8.0 # BSD

[files]
packages =
    oslo_config

[entry_points]
console_scripts =
    oslo-config-generator = oslo_config.generator:main
    oslo-config-validator = oslo_config.validator:main
oslo.config.opts =
    oslo.config = oslo_config._list_opts:list_opts
oslo.config.driver =
    remote_file = oslo_config.sources._uri:URIConfigurationSourceDriver

[mypy]
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = skip
incremental = true
check_untyped_defs = true
warn_unused_ignores = true

[mypy-oslo_config.tests.*]
ignore_errors = true
